[FIX] portal: add ellipses to search box placeholder overflow
Versions:
---------
- 15.0+

Issue:
------
Depending on the font, string & window size, the `oe_search_box`
placeholder may get cropped awkwardly.

Cause:
------
The search field can't guarantee adequate width to show the full
placeholder string.

Solution:
---------
Add `text-overflow: ellipsis` CSS rule for `oe_search_box` elements to
make it clear the placeholder was cropped.

Related:
--------
- odoo/enterprise@b69c7da11a6d454d24af8006f4b78486a653a717
- odoo/enterprise@5e47eaf30f6365cababe1a29d95caa4e2b72a57f

opw-3504281

--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -204,6 +204,7 @@ img, .media_iframe_video, .o_image {
 }
 .oe_search_box {
     padding-right: 23px;
+    text-overflow: ellipsis;
 }
 
 // Kept for (up to) saas-12 compatibility
